[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/fonts/Text-10-O1.tres" type="DynamicFont" id=1]
[ext_resource path="res://prefabs/sectors/tutorial-steps/Step00.gd" type="Script" id=2]

[node name="Step-00" type="Node2D"]
z_index = -99
script = ExtResource( 2 )

[node name="Overlay" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="HBoxContainer" type="HBoxContainer" parent="Overlay"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeftBox" type="MarginContainer" parent="Overlay/HBoxContainer"]
margin_right = 478.0
margin_bottom = 540.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/margin_right = 32
custom_constants/margin_top = 24
custom_constants/margin_left = 24

[node name="InfoEnter-00" type="VBoxContainer" parent="Overlay/HBoxContainer/LeftBox"]
visible = false
margin_left = 24.0
margin_top = 24.0
margin_right = 446.0
margin_bottom = 540.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 24

[node name="InfoLabel" type="Label" parent="Overlay/HBoxContainer/LeftBox/InfoEnter-00"]
modulate = Color( 0.627451, 0.627451, 0.627451, 1 )
show_behind_parent = true
margin_right = 422.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 1 )

[node name="InfoExit-00" type="VBoxContainer" parent="Overlay/HBoxContainer/LeftBox"]
unique_name_in_owner = true
visible = false
margin_left = 24.0
margin_top = 24.0
margin_right = 446.0
margin_bottom = 540.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 24

[node name="InfoLabel" type="Label" parent="Overlay/HBoxContainer/LeftBox/InfoExit-00"]
modulate = Color( 0.627451, 0.627451, 0.627451, 1 )
show_behind_parent = true
margin_right = 422.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 1 )
text = "As you are placed into your new
whale the instructor asks if you
want a refresher or jump right in?"
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="Overlay/HBoxContainer/LeftBox/InfoExit-00"]
margin_top = 72.0
margin_right = 422.0
margin_bottom = 98.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 16

[node name="Box" type="MarginContainer" parent="Overlay/HBoxContainer/LeftBox/InfoExit-00/HBoxContainer"]
margin_right = 32.0
margin_bottom = 26.0
rect_min_size = Vector2( 32, 0 )
mouse_filter = 2

[node name="SkipButton-00" type="Button" parent="Overlay/HBoxContainer/LeftBox/InfoExit-00/HBoxContainer"]
unique_name_in_owner = true
show_behind_parent = true
margin_left = 48.0
margin_right = 105.0
margin_bottom = 26.0
disabled = true
text = "Skip"

[node name="StartButton-00" type="Button" parent="Overlay/HBoxContainer/LeftBox/InfoExit-00/HBoxContainer"]
unique_name_in_owner = true
show_behind_parent = true
margin_left = 121.0
margin_right = 192.0
margin_bottom = 26.0
disabled = true
text = "Start"

[node name="RightBox" type="VBoxContainer" parent="Overlay/HBoxContainer"]
margin_left = 482.0
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
